# c2man

./: ChangeLog  Configure  Makefile.SH  Makefile.am  Makefile.in  README  README.orig  README.stoney  autodoc.c  bootstrap  c2man.c  c2man.h  c2man.man  config.h.in  config_h.SH  configure  configure.ac  confmagic.h  enum.c  enum.h  fixexamp.in  flatten.sed.in  grammar.y  html.c  latex.c  lex.l  manpage.c  manpage.h  nroff.c  output.h  semantic.c  semantic.h  strappend.c  strappend.h  strconcat.c  strconcat.h  string.c  symbol.c  symbol.h  texinfo.c
.github/workflows/: release-dist.yml
amiga/: config.h  confmagic.h  popen.c
pc/: config.h
vms/: config.h
